src/pages/home/home.module.css
@value fontBlackColor, whiteColor, borderWhiteColor from '../../assets/colors.css';
@value borderMidnightColor, grayishBlackColor, zcashYellowColor from '../../assets/colors.css';
@value grayishWhiteColor, darkWhiteColor, lightBlackColor from '../../assets/colors.css';
@value widgetColor, blackColor, twitterBlueColor from '../../assets/colors.css';
@value greenColor, baseBlackColor from '../../assets/colors.css';
@value maxWidth: 880px;

h2 {
  margin: 0;
  padding: 5px 0 10px 0;
}

.screenshotView {
  max-width: maxWidth;
  margin: 0 auto;
}

.baseImg {
  display: flex;
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

.baseHeaderContainer {
  padding: 0 20px;
}

.leadSection {
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: zcashYellowColor;
  padding: 10px 0;
  font-weight: 700;
  font-size: 28px;
}

.binanceLogo {
  composes: baseImg;
  align-self: center;
  width: 22px;
  height: 22px;
  background-image: url('../../assets/img/binance256.png');
  margin-right: 2px;
}

.themeContainer {
  display: flex;
  justify-content: flex-end;
  padding-top: 10px;
}

.baseTitle {
  font-size: 26px;
  text-align: center;
  max-width: maxWidth;
  margin: 0 auto;
}

.approxDate {
  display: flex;
  flex-direction: row-reverse;
  justify-content: center;
  padding: 6px 0;
  font-weight: 500;
}

.baseHalvingInfo {
  padding: 40px 20px;
}

.countdownInfoContainer {
 display: flex;
 flex-direction: column;
}

.timer {
  display: flex;
  flex-direction: column;
  border-radius: 6px;
  overflow: hidden;
}

.logoContainer {
  padding: 16px 40px;
  display: flex;
  background-color: grayishBlackColor;
  justify-content: center;
}

.countdownContainer {
  display: flex;
  font-weight: 600;
  background-color: zcashYellowColor;
  justify-content: space-around;
  align-items: center;
  padding: 16px 0;
  font-weight: 700;
  flex-grow: 1;
}

.baseTimeContainer {
  margin: 0 auto;
  max-width: maxWidth;
}

.number {
  font-size: 56px;
}

.timeLabel {
  font-size: 12px;
  text-transform: uppercase;
}

.timerColumn {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.figureLogo {
  composes: baseImg;
  width: 80px;
  height: 80px;
  background-image: url('../../assets/img/zcash_logo.png');
}

.infoBlocksContainer {
  max-width: maxWidth;
  margin: 20px auto 0 auto;
}

.infoBlock {
  display: flex;
  flex-direction: column;
  padding: 16px;
  align-items: center;
  flex: 1 0;
  border-radius: 6px;
  justify-content: center;
}

.infoBlock:not(:last-child) {
  margin-bottom: 16px;
}

.data {
  font-size: 22px;
  font-weight: 600;
}

.statData {
  font-size: 18px;
  font-weight: 600;
}

.label {
  font-size: 18px;
  text-align: center;
}

.statLabel {
  font-size: 16px;
}

.faqContainer {
  display: flex;
  padding: 40px 20px;
}

.alphaSection {
  /* border: 1px solid red; */
  max-width: maxWidth;
  margin: 0 auto;
}

.baseQuestion {
  font-size: 26px;
  font-weight: 700;
  margin-bottom: 10px;
}

.baseAnswer {
  font-size: 16px;
  font-weight: 300;
  margin-bottom: 20px;
  line-height: 1.6;
}

.statsContainer {
  padding: 40px 20px;
}

.wsWrapper {
  max-width: maxWidth;
  margin: 0 auto;
  height: 100%;
}

.widgetContainer {
  margin-bottom: 24px;
  height: 360px;
}

.statSheet {
  flex: 1 0;
}

.sheetRow {
  display: flex;
  justify-content: space-between;
  margin-top: 4px;
  padding: 10px 10px;
}

.footer {
  display: flex;
  flex-direction: column-reverse;
  padding: 40px 40px;
  font-weight: 600;
  font-size: 14px;
  max-width: maxWidth;
  margin: 0 auto;
  align-items: flex-end;
}

.link {
  text-decoration: none;
  color: zcashYellowColor;
}

.link:hover {
  color: twitterBlueColor;
}

.leadsLink {
  text-decoration: none;
}

.binanceLogoWrapper {
  display: flex;
  border-bottom: 1px solid zcashYellowColor;
}

.binanceLogoWrapper:hover {
  border-bottom: 1px solid baseBlackColor;
}

.tipBoxContainer {
  display: flex;
  align-self: center;
  margin-bottom: 20px;
}

.tipBox {
  composes: baseImg;
  width: 78px;
  height: 78px;
  margin: 0 10px;
}

.qrContainer {
  text-align: center;
  font-weight: 600;
  position: relative;
}

.qrContainer .tooltiptext {
  visibility: hidden;
  width: 120px;
  background-color: baseBlackColor;
  color: whiteColor;
  text-align: center;
  border-radius: 6px;
  padding: 6px 6px;
  position: absolute;
  z-index: 1;
  bottom: 108%;
  left: 50%;
  margin-left: -60px;
  overflow-wrap: break-word;
}

.qrContainer .tooltiptext::after {
  content: "";
  position: absolute;
  top: 100%;
  left: 50%;
  margin-left: -5px;
  border-width: 5px;
  border-style: solid;
  border-color: black transparent transparent transparent;
}

.qrContainer:hover .tooltiptext {
  visibility: visible;
}

.zecqr {
  composes: tipBox;
  background-image: url('../../assets/img/zectip.png');
}

.zZecqr {
  composes: tipBox;
  background-image: url('../../assets/img/zzectip.png');
}

.ethqr {
  composes: tipBox;
  background-image: url('../../assets/img/ethtip.png');
}

.daylightApproxDate {
  composes: approxDate;
  color: blackColor;
}

.midnightApproxDate {
  composes: approxDate;
  color: darkWhiteColor;
}

.daylightLeadsLink {
  composes: leadsLink;
  color: whiteColor;
}

.midnightLeadsLink {
  composes: leadsLink;
  color: baseBlackColor;
}

.daylightLeadSection {
  composes: leadSection;
  color: whiteColor;
}

.midnightLeadSection {
  composes: leadSection;
  color: baseBlackColor;
}

.daylightFooterContainer {
  background-color: whiteColor;
}

.midnightFooterContainer {
  background-color: grayishBlackColor;
}

.midnightFooter {
  composes: footer;
  background-color: grayishBlackColor;
  color: whiteColor;
}

.daylightSheetRow:nth-child(odd) {
  background-color: whiteColor;
}

.midnightSheetRow:nth-child(odd) {
  background-color: lightBlackColor;
}

.daylightStatData {
  composes: statData;
  color: blackColor;
}

.daylightStatLabel {
 composes: statLabel;
 color: blackColor;
}

.midnightStatLabel {
  composes: statLabel;
  color: darkWhiteColor;
}

.midnightStatData {
  composes: statData;
  color: darkWhiteColor;
}

.daylightStatsContainer {
  composes: statsContainer;
  background-color: grayishWhiteColor;
}

.midnightStatsContainer {
  composes: statsContainer;
  background-color: blackColor;
}

.daylightAnswer {
  composes: baseAnswer;
  color: blackColor;
}

.midnightAnswer {
  composes: baseAnswer;
  color: darkWhiteColor;
}

.daylightQuestion {
  composes: baseQuestion;
  color: blackColor;
}

.midnightQestion {
  composes: baseQuestion;
  color: whiteColor;
}

.midnightHeaderContainer {
  composes: baseHeaderContainer;
  background-color: grayishBlackColor;
}

.daylightHalvingInfo {
  composes: baseHalvingInfo;
  background-color: grayishWhiteColor;
}

.midnightHalvingInfo {
  composes: baseHalvingInfo;
  background-color: blackColor;
}

.daylightTimerContainer {
  composes: baseTimeContainer;
  box-shadow: 0 5px 9px rgba(0,0,0,.08), 0 5px 9px rgba(0,0,0,0.4);
  border-radius: 6px;
  color: whiteColor;
}

.midnightTimerContainer {
  composes: baseTimeContainer;

}

.daylightFaqContainer {
  composes: faqContainer;
  background-color: whiteColor;
}

.midnightFaqContainer {
  composes: faqContainer;
  background-color: lightBlackColor
}

.daylightTitle {
  composes: baseTitle;
  color: fontBlackColor;
}

.midnightTitle {
  composes: baseTitle;
  color: whiteColor;
}

.daylightInfoBlock {
  composes: infoBlock;
  box-shadow: 0 5px 9px rgba(0,0,0,.08), 0 5px 9px rgba(0,0,0,0.4);
  background-color: whiteColor;
}

.midnightInfoBlock {
  composes: infoBlock;
  color: whiteColor;
  background-color: grayishBlackColor;
}

.daylightWidgetContainer {
  composes: widgetContainer;
  box-shadow: 0 5px 9px rgba(0,0,0,.08), 0 5px 9px rgba(0,0,0,0.4);
}

.midnightWidgetContainer {
  composes: widgetContainer;
  background-color: lightBlackColor;
}

@media only screen and (min-width: 700px) {
  .timer {
    flex-direction: row;
  }
  .infoBlocksContainer {
    display: flex;
  }
  .infoBlock:not(:last-child) {
    margin-bottom: 0;
    margin-right: 24px;
  }
  .wsWrapper {
    display: flex;
  }
  .widgetContainer {
    flex: 1 0;
    margin-bottom: 0;
    margin-right: 24px
  }
  .footer {
    flex-direction: row;
    justify-content: space-between;
  }
  .tipBoxContainer {
    margin-bottom: 0;
  }
  .approxDate {
    justify-content: flex-start
  }
}

@media only screen and (min-width: 500px) {
  .leadSection {
    flex-direction: row;
    justify-content: center;
  }
}

